Fix shifted 'Zu meiner Person' text on small cards

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -196,7 +196,7 @@ header .padding-container
     margin-top: 20px
     font-size: 1.05em
     color: #888888
-    @media screen and (min-width: $card-breakpoint + 50)
+    @media screen and (min-width: 750px)
       display: inline-block
       float: right
       margin-top: 0
